readd BotanicAdditions and Feywild compat